--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/stack": "^6.3.12",
     "react": "18.2.0",
     "react-native": "0.71.2"
   },
